@@ -986,3 +986,4 @@ pcall(require("repentogon_extras/daily_stats"))
 pcall(require("repentogon_extras/stats_menu"))
 pcall(require("repentogon_extras/bestiary_menu"))
 pcall(require("repentogon_extras/onlinestub"))
+pcall(require("repentogon_extras/mods_menu_tweaks"))
